--- a/css/estilo.css
+++ b/css/estilo.css
@@ -16,3 +16,9 @@ fotos{
     max-width: 100%; 
     height: auto;
 }
+.img2{
+    max-width:1000px;
+    max-height:800px;
+    max-width: 100%; 
+    height: auto;
+}
